<resources>
    <string name="app_name">GYK - Demo</string>
    <string name="btn_linearLayoutV">Linear Layout (Dikey)</string>
    <string name="btn_linearLayoutH">Linear Layout (Yatay)</string>
    <string name="btn_login">Kullanıcı Giriş Arayüzü</string>
    <string name="editText_username_hint">Kullanıcı Adı</string>
    <string name="editText_password_hint">Şifre</string>
    <string name="btn_user_login">Giriş Yap</string>
    <string name="btn_listview_example">Varsayılan ListView</string>
    <string name="editText_name">İsim Soyisim</string>
    <string name="checkBox_isWoman">Kadın mı?</string>
    <string name="button_add">Listeye Ekle</string>
    <string name="button_goList">Listeye Git</string>
    <string name="button_customListView">Özel ListView</string>
</resources>
